--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=sql-dml-procedures
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:1313/postgres
 spring.datasource.username=postgres
-spring.datasource.password=hello
+spring.datasource.password=mira6713..
+
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
